tests/machine/x/ocaml/test_block.error
File "/workspace/mochi/tests/machine/x/ocaml/test_block.ml", line 24, characters 2-15:
24 |   print_endline "ok";
       ^^^^^^^^^^^^^
Error: Syntax error
